@@ -221,12 +221,12 @@ describe :dir_glob, shared: true do
 
   it "respects the order of {} expressions, expanding left most first" do
     files = Dir.send(@method, "brace/a{.js,.html}{.erb,.rjs}")
-    files.should == %w!brace/a.js.rjs brace/a.html.erb!
+    files.sort.should == %w!brace/a.html.erb brace/a.js.rjs!
   end
 
   it "respects the optional nested {} expressions" do
     files = Dir.send(@method, "brace/a{.{js,html},}{.{erb,rjs},}")
-    files.should == %w!brace/a.js.rjs brace/a.js brace/a.html.erb brace/a.erb brace/a!
+    files.sort.should == %w!brace/a brace/a.erb brace/a.html.erb brace/a.js brace/a.js.rjs!
   end
 
   it "matches special characters by escaping with a backslash with '\\<character>'" do
